--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_API_URL=http://localhost:8000
 NEXT_GOOGLE_API_LOGIN=http://localhost:8000/auth/google/login
+NEXT_PUBLIC_BD_EXTENSION_ID=lldoeigkokefjgohogmehffdohhphgco
