--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.59.16",
+    "@types/chrome": "^0.0.283",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "clx": "^1.0.0",
