--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.6",
+    "react-tooltip": "^5.28.0",
     "rimraf": "^6.0.1",
     "sass": "^1.80.4",
     "scss": "^0.2.4",
