--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "js-cookie": "^3.0.5",
     "mkdirp": "^3.0.1",
     "next": "14.2.15",
+    "qlu-20-ui-library": "^1.6.40",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
