--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,7 @@
     // "space-before-function-paren": ["error", "never"],
     "comma-dangle": ["error", "always-multiline"],
     "function-paren-newline": ["error", "consistent"],
-    "operator-linebreak": ["error", "after"],
+    // "operator-linebreak": ["error", "after"],
     "object-curly-newline": ["error", { "multiline": true, "consistent": true }],
     "no-underscore-dangle": ["error", { "allow": ["_source", "_id"] }],
 
@@ -46,7 +46,7 @@
     "jsx-a11y/click-events-have-key-events": "warn",
 
     // Import rules
-    "import/prefer-default-export": "off", // For flexibility with named exports
+    "import/prefer-default-export": "off",
 
     // Code style and formatting
     "prettier/prettier": [
